PossibleVerification iteration
